responsive youtube video

--- a/static/newsletter/index.html
+++ b/static/newsletter/index.html
@@ -150,8 +150,8 @@
         <h2 class="section-heading text-center mb-5">One of my talks (about GoBDD library)</h2>
           <div class="row">
             <div class="col-12 col-md-12">
-              <div class="figure-holder mb-5 text-center">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/G-wWOitDZAU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="figure-holder mb-5 text-center" style="position: relative;padding-bottom: 56.25%;height: 0;">
+                <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" src="https://www.youtube.com/embed/G-wWOitDZAU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div><!--//figure-holder-->
             </div><!--//col-->
           </div><!--//row-->
@@ -166,7 +166,7 @@
 			    <div class="item col-12 col-md-6 col-lg-6">
 				    <div class="item-inner p-3 p-lg-4">
 					    <div class="item-header mb-3">
-						    <div><a href="https://developer20.com/refactoring-for-better-testability/"><img class="author-pic" src="assets/images/testability.jpg" /></a></div>
+						    <div><a href="https://developer20.com/refactoring-for-better-testability/"><img class="img-fluid" src="assets/images/testability.jpg" /></a></div>
 						    <h3 class="item-heading"><a href="https://developer20.com/refactoring-for-better-testability/">Refactoring for better testability</a></h3>
 					    </div><!--//item-heading-->
               <div class="item-desc">
@@ -177,7 +177,7 @@
 			    <div class="item col-12 col-md-6 col-lg-6">
 				    <div class="item-inner p-3 p-lg-4">
               <div class="item-header mb-3">
-						    <div><a href="https://developer20.com/is-my-interface-too-big/"><img class="author-pic" src="assets/images/interface.jpg" /></a></div>
+						    <div><a href="https://developer20.com/is-my-interface-too-big/"><img class="img-fluid" src="assets/images/interface.jpg" /></a></div>
 						    <h3 class="item-heading"><a href="https://developer20.com/is-my-interface-too-big/">Is my interface too big?</a></h3>
 					    </div><!--//item-heading-->
               <div class="item-desc">
@@ -188,7 +188,7 @@
           <div class="item col-12 col-md-6 col-lg-6">
 				    <div class="item-inner p-3 p-lg-4">
               <div class="item-header mb-3">
-						    <div><a href="https://developer20.com/tcp-scanner-in-go/"><img class="author-pic" src="assets/images/tcp.jpg" /></a></div>
+						    <div><a href="https://developer20.com/tcp-scanner-in-go/"><img class="img-fluid" src="assets/images/tcp.jpg" /></a></div>
 						    <h3 class="item-heading"><a href="https://developer20.com/tcp-scanner-in-go/">Writing TCP scanner in Go</a></h3>
 					    </div><!--//item-heading-->
               <div class="item-desc">
@@ -200,7 +200,7 @@
           <div class="item col-12 col-md-6 col-lg-6">
 				    <div class="item-inner p-3 p-lg-4">
               <div class="item-header mb-3">
-						    <div><a href="https://developer20.com/using-sync-pool/"><img class="author-pic" src="assets/images/pool.jpg" /></a></div>
+						    <div><a href="https://developer20.com/using-sync-pool/"><img class="img-fluid" src="assets/images/pool.jpg" /></a></div>
 						    <h3 class="item-heading"><a href="https://developer20.com/using-sync-pool/">Using sync.Pool</a></h3>
 					    </div><!--//item-heading-->
               <div class="item-desc">
@@ -212,7 +212,7 @@
           <div class="item col-12 col-md-6 col-lg-6">
 				    <div class="item-inner p-3 p-lg-4">
               <div class="item-header mb-3">
-						    <div><a href="https://developer20.com/when-you-can-nose-messages-in-kafka/"><img class="author-pic" src="assets/images/kafka.jpg" /></a></div>
+						    <div><a href="https://developer20.com/when-you-can-nose-messages-in-kafka/"><img class="img-fluid" src="assets/images/kafka.jpg" /></a></div>
 						    <h3 class="item-heading"><a href="https://developer20.com/when-you-can-nose-messages-in-kafka/">When you can lose messages in Kafka</a></h3>
 					    </div><!--//item-heading-->
               <div class="item-desc">
@@ -224,7 +224,7 @@
           <div class="item col-12 col-md-6 col-lg-6">
 				    <div class="item-inner p-3 p-lg-4">
               <div class="item-header mb-3">
-						    <div><a href="https://developer20.com/services-in-ddd-finally-explained/"><img class="author-pic" src="assets/images/ddd.jpg" /></a></div>
+						    <div><a href="https://developer20.com/services-in-ddd-finally-explained/"><img class="img-fluid" src="assets/images/ddd.jpg" /></a></div>
 						    <h3 class="item-heading"><a href="https://developer20.com/services-in-ddd-finally-explained/">Services in DDD finally explained</a></h3>
 					    </div><!--//item-heading-->
               <div class="item-desc">
