fix typo in copy

--- a/static/newsletter/index.html
+++ b/static/newsletter/index.html
@@ -117,7 +117,7 @@
 						<h3 class="item-heading">Get premium materials (videos etc)</h3>
 					</div><!--//item-heading-->
 					<div class="item-desc">
-						Only for subscribers will receive special materials that will help understand the key concepts of Go (and software engineering in general).
+						Only subscribers will receive special materials that will help understand the key concepts of Go (and software engineering in general).
 					</div><!--//item-desc-->
 				</div><!--//item-inner-->
 			</div><!--//item-->
