--- a/static/newsletter/index.html
+++ b/static/newsletter/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Become a successful Go developer</title>
 	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-					new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-				j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-				'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-KD97NJK');</script>
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-KD97NJK');</script>
 	<!-- End Google Tag Manager -->
 
 	<!-- Meta -->
@@ -29,7 +33,7 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-8338248-18"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+		function gtag() {dataLayer.push(arguments);}
 		gtag('js', new Date());
 
 		gtag('config', 'UA-8338248-18');
@@ -38,11 +42,14 @@
 
 	<!-- MailerLite Universal -->
 	<script>
-		(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
-			var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
-			f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
-			var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
-			_.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+		(function (m, a, i, l, e, r) {
+			m['MailerLiteObject'] = e; function f() {
+				var c = {a: arguments, q: []}; var r = this.push(c); return "number" != typeof r ? r : f.bind(c.q);
+			}
+			f.q = f.q || []; m[e] = m[e] || f.bind(f.q); m[e].q = m[e].q || f.q; r = a.createElement(i);
+			var _ = a.getElementsByTagName(i)[0]; r.async = 1; r.src = l + '?v' + (~~(new Date().getTime() / 1000000));
+			_.parentNode.insertBefore(r, _);
+		})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
 
 		var ml_account = ml('accounts', '961542', 'n5z2u6s1o1', 'load');
 	</script>
@@ -50,138 +57,154 @@
 </head>
 
 <body>
-<header class="header">
-	<div class="branding">
-		<div class="container position-relative py-3">
-			<div class="logo-wrapper">
-				<div class="site-logo"><a class="navbar-brand" href="/"><img class="logo-icon mr-2" src="assets/images/logo.png" alt="logo" ></a></div>
-			</div><!--//docs-logo-wrapper-->
+	<header class="header">
+		<div class="branding">
+			<div class="container position-relative py-3">
+				<div class="logo-wrapper">
+					<div class="site-logo"><a class="navbar-brand" href="/"><img class="logo-icon mr-2"
+								src="assets/images/logo.png" alt="logo"></a></div>
+				</div><!--//docs-logo-wrapper-->
+
+			</div><!--//container-->
+		</div><!--//branding-->
+	</header><!--//header-->
+
+	<section class="hero-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 col-md-12 pt-5 mb-5 align-self-center">
+					<div class="promo pr-md-3 pr-lg-5">
+						<h1 class="headline mb-3 text-center">
+							Become a successful Go developer
+						</h1><!--//headline-->
+						<div class="subheadline mb-4">
+							If you want to be better in Go, understand its concepts well, or you want to learn Go to find the first
+							job, this newsletter is just for you!
+						</div><!--//subheading-->
+
+						<div class="cta-holder text-center">
+							<a class="btn btn-primary mr-lg-2" href="#" data-toggle="modal" data-target="#subscribeModal">Subscribe
+								now >></a>
+						</div><!--//cta-holder-->
+					</div><!--//promo-->
+				</div><!--col-->
+
+			</div><!--//row-->
+		</div><!--//container-->
+	</section><!--//hero-section-->
+
+	<section id="benefits-section" class="benefits-section theme-bg-light-gradient py-5">
+		<div class="container py-5">
+			<h2 class="section-heading text-center mb-3">What Will You Get From The Newsletter?</h2>
+			<!-- <div class="section-intro single-col-max mx-auto text-center mb-5">Section intro goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer blandit consequat consequat. Orci varius natoque penatibus et magnis. </div> -->
+			<div class="row text-center">
+				<div class="item col-12 col-md-6 col-lg-6">
+					<div class="item-inner p-3 p-lg-4">
+						<div class="item-header mb-3">
+							<div class="item-icon"><i class="fas fa-laptop-code"></i></div>
+							<h3 class="item-heading">Learn how to write high quality Go code</h3>
+						</div><!--//item-heading-->
+						<div class="item-desc">
+							Learning how to write easy to read and understand code is essencial. It improves both your and your
+							teammates performance.
+						</div><!--//item-desc-->
+					</div><!--//item-inner-->
+				</div><!--//item-->
+				<div class="item col-12 col-md-6 col-lg-6">
+					<div class="item-inner p-3 p-lg-4">
+						<div class="item-header mb-3">
+							<div class="item-icon"><i class="fas fa-chart-bar"></i></div>
+							<h3 class="item-heading">Use real world examples</h3>
+						</div><!--//item-heading-->
+						<div class="item-desc">
+							Internet is full of theory. The same comes with books. From me, you'll get projects or examples from real
+							world examples (very often from my own projects). No more only theory. Practice is the key!
+						</div><!--//item-desc-->
+					</div><!--//item-inner-->
+				</div><!--//item-->
+				<div class="item col-12 col-md-6 col-lg-6">
+					<div class="item-inner p-3 p-lg-4">
+						<div class="item-header mb-3">
+							<div class="item-icon"><i class="fas fa-video"></i></div>
+							<h3 class="item-heading">Get premium materials (videos etc)</h3>
+						</div><!--//item-heading-->
+						<div class="item-desc">
+							Only subscribers will receive special materials that will help understand the key concepts of Go (and
+							software engineering in general).
+						</div><!--//item-desc-->
+					</div><!--//item-inner-->
+				</div><!--//item-->
+				<div class="item col-12 col-md-6 col-lg-6">
+					<div class="item-inner p-3 p-lg-4">
+						<div class="item-header mb-3">
+							<div class="item-icon"><i class="fas fa-comment-dots"></i></div>
+							<h3 class="item-heading">Have the impact of what I prepare for you</h3>
+						</div><!--//item-heading-->
+						<div class="item-desc">
+							I listen to my subscribers. You can suggest a topic. I'll put it very high on my to-do list! This is how
+							<a href="https://developer20.com/oauth2-and-go/">OAuth2 and Go</a> was created!
+						</div><!--//item-desc-->
+					</div><!--//item-inner-->
+				</div><!--//item-->
+			</div><!--//row-->
+		</div><!--//container-->
+	</section><!--//benefits-section-->
+
+	<section id="author-section" class="author-section section theme-bg-primary py-5">
+		<div class="container py-3">
+			<div class="author-profile text-center mb-5">
+				<img class="author-pic" src="assets/images/photo.jpg" alt="image">
+			</div><!--//author-profile-->
+			<h2 class="section-heading text-center text-white mb-3">About Me</h2>
+			<div class="author-bio single-col-max mx-auto">
+				<p>
+					I started my programming work in 2012. In 2018, I wrote my first line of code in Go on production and one year
+					later I became <a
+						href="https://developers.google.com/community/experts/directory/profile/profile-bart_C5_82omiej_klimczak">Google
+						Developer Expert in Go category</a>.
+					I'm the leader of local Meetup group <a href="https://www.meetup.com/GoCracow/">#GoCracow</a> as well as
+					co-organizer <a href="https://www.meetup.com/Golang-Poland/">#GolandPoland<a> (we moved online because of
+							COVID).
+				</p>
+				<p>That's not all! I have a several open-source projects like <a
+						href="https://github.com/go-bdd/gobdd">GoBDD</a> or <a
+						href="https://github.com/bkielbasa/cyclop/">cyclop</a> but most of my time I focus on my blog <a
+						href="https://developer20.com">developer20.com</a> where I share my knowlage with others.</p>
+
+			</div><!--//author-bio-->
 
 		</div><!--//container-->
-	</div><!--//branding-->
-</header><!--//header-->
+	</section><!--//author-section-->
 
-<section class="hero-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-12 col-md-12 pt-5 mb-5 align-self-center">
-				<div class="promo pr-md-3 pr-lg-5">
-					<h1 class="headline mb-3 text-center">
-						Become a successful Go developer
-					</h1><!--//headline-->
-					<div class="subheadline mb-4">
-						If you want to be better in Go, understand its concepts well, or you want to learn Go to find the first job, this newsletter is just for you!
-					</div><!--//subheading-->
+	<footer class="footer">
+		<div class="footer-bottom text-center py-5">
+			<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
+			<small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a
+					class="theme-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for
+				developers</small>
+		</div>
+	</footer>
 
-					<div class="cta-holder text-center">
-						<a class="btn btn-primary mr-lg-2" href="#" data-toggle="modal" data-target="#subscribeModal">Subscribe now >></a>
-					</div><!--//cta-holder-->
-				</div><!--//promo-->
-			</div><!--col-->
-
-		</div><!--//row-->
-	</div><!--//container-->
-</section><!--//hero-section-->
-
-<section id="benefits-section" class="benefits-section theme-bg-light-gradient py-5">
-	<div class="container py-5">
-		<h2 class="section-heading text-center mb-3">What Will You Get From The Newsletter?</h2>
-		<!-- <div class="section-intro single-col-max mx-auto text-center mb-5">Section intro goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer blandit consequat consequat. Orci varius natoque penatibus et magnis. </div> -->
-		<div class="row text-center">
-			<div class="item col-12 col-md-6 col-lg-6">
-				<div class="item-inner p-3 p-lg-4">
-					<div class="item-header mb-3">
-						<div class="item-icon"><i class="fas fa-laptop-code"></i></div>
-						<h3 class="item-heading">Learn how to write high quality Go code</h3>
-					</div><!--//item-heading-->
-					<div class="item-desc">
-						Learning how to write easy to read and understand code is essencial. It improves both your and your teammates performance.
-					</div><!--//item-desc-->
-				</div><!--//item-inner-->
-			</div><!--//item-->
-			<div class="item col-12 col-md-6 col-lg-6">
-				<div class="item-inner p-3 p-lg-4">
-					<div class="item-header mb-3">
-						<div class="item-icon"><i class="fas fa-chart-bar"></i></div>
-						<h3 class="item-heading">Use real world examples</h3>
-					</div><!--//item-heading-->
-					<div class="item-desc">
-						Internet is full of theory. The same comes with books. From me, you'll get projects or examples from real world examples (very often from my own projects). No more only theory. Practice is the key!
-					</div><!--//item-desc-->
-				</div><!--//item-inner-->
-			</div><!--//item-->
-			<div class="item col-12 col-md-6 col-lg-6">
-				<div class="item-inner p-3 p-lg-4">
-					<div class="item-header mb-3">
-						<div class="item-icon"><i class="fas fa-video"></i></div>
-						<h3 class="item-heading">Get premium materials (videos etc)</h3>
-					</div><!--//item-heading-->
-					<div class="item-desc">
-						Only subscribers will receive special materials that will help understand the key concepts of Go (and software engineering in general).
-					</div><!--//item-desc-->
-				</div><!--//item-inner-->
-			</div><!--//item-->
-			<div class="item col-12 col-md-6 col-lg-6">
-				<div class="item-inner p-3 p-lg-4">
-					<div class="item-header mb-3">
-						<div class="item-icon"><i class="fas fa-comment-dots"></i></div>
-						<h3 class="item-heading">Have the impact of what I prepare for you</h3>
-					</div><!--//item-heading-->
-					<div class="item-desc">
-						I listen to my subscribers. You can suggest a topic. I'll put it very high on my to-do list! This is how <a href="https://developer20.com/oauth2-and-go/">OAuth2 and Go</a> was created!
-					</div><!--//item-desc-->
-				</div><!--//item-inner-->
-			</div><!--//item-->
-		</div><!--//row-->
-	</div><!--//container-->
-</section><!--//benefits-section-->
-
-<section id="author-section" class="author-section section theme-bg-primary py-5">
-	<div class="container py-3">
-		<div class="author-profile text-center mb-5">
-			<img class="author-pic" src="assets/images/photo.jpg" alt="image" >
-		</div><!--//author-profile-->
-		<h2 class="section-heading text-center text-white mb-3">About Me</h2>
-		<div class="author-bio single-col-max mx-auto">
-			<p>
-				I started my programming work in 2012. In 2018, I wrote my first line of code in Go on production and one year later I became <a href="https://developers.google.com/community/experts/directory/profile/profile-bart_C5_82omiej_klimczak">Google Developer Expert in Go category</a>.
-				I'm the leader of local Meetup group <a href="https://www.meetup.com/GoCracow/">#GoCracow</a> as well as co-organizer <a href="https://www.meetup.com/Golang-Poland/">#GolandPoland<a> (we moved online because of COVID).
-			</p>
-			<p>That's not all! I have a several open-source projects like <a href="https://github.com/go-bdd/gobdd">GoBDD</a> or <a href="https://github.com/bkielbasa/cyclop/">cyclop</a> but most of my time I focus on my blog <a href="https://developer20.com">developer20.com</a> where I share my knowlage with others.</p>
-
-		</div><!--//author-bio-->
-
-	</div><!--//container-->
-</section><!--//author-section-->
-
-<footer class="footer">
-	<div class="footer-bottom text-center py-5">
-		<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-		<small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a class="theme-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
-	</div>
-</footer>
-
-<div class="modal" tabindex="-1" role="dialog" id="subscribeModal">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-body">
-				<div class="ml-form-embed"
-					 data-account="961542:n5z2u6s1o1"
-					 data-form="3250081:h1r5k7">
+	<div class="modal" tabindex="-1" role="dialog" id="subscribeModal">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div class="ml-form-embed" data-account="961542:n5z2u6s1o1" data-form="3250081:h1r5k7">
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-<!-- Javascript -->
-<script src="assets/plugins/jquery-3.4.1.min.js"></script>
-<script src="assets/plugins/popper.min.js"></script>
-<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/plugins/jquery.scrollTo.min.js"></script>
-<script src="assets/plugins/back-to-top.js"></script>
+	<!-- Javascript -->
+	<script src="assets/plugins/jquery-3.4.1.min.js"></script>
+	<script src="assets/plugins/popper.min.js"></script>
+	<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+	<script src="assets/plugins/jquery.scrollTo.min.js"></script>
+	<script src="assets/plugins/back-to-top.js"></script>
 
-<script src="assets/js/main.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
